snapshot-tests/tests/snapshots/parser__bad_underscores__trailing2.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ trailing2:1:10
  │
1 │ foo = 1_0_
  │          ^ invalid integer: underscores must be between two digits
